# pdf-signer-desktop

./: guia_desarrollo.md  main.py  pyproject.toml  roadmap.md  sellador_carpetas_v3.py
app/core/: config_manager.py  pdf_handler.py  pdf_signer.py  preview_generator.py  signature_manager.py
app/models/: config_model.py  document_model.py  signature_mode_config.py  signature_model.py
app/ui/: canvas_view.py  main_window.py  mode_selector.py  signature_panel.py
app/utils/: units.py  validators.py
tests/: create_test_pdf.py  create_test_signature.py  test_app.py  test_canvas_view.py  test_config_manager.py  test_models.py  test_pdf_handler.py  test_preview_generator.py  test_signature_manager.py  test_utils.py
