[tool.poetry]
name = "pdf-signer-desktop"
version = "0.1.0"
description = "Aplicación de firmado de pdf's"
authors = ["eder3232 <eldebar.dk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
